[package]
name = "broadcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
console-subscriber =  "0.1"
crdts = "7"
rand = "0.8"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.15", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build]
rustflags = ["--cfg", "tokio_unstable"]
